Fixed bug #81088 error in regression test for oci_fetch_object() and oci_fetch_array()

Closes GH-7072